# premier-geek

./: .env.template  .gitignore  .pre-commit-config.yaml  README.md  app.py  cdk.json  pyproject.toml
premier_geek/: component.py
premier_geek/api/: infrastructure.py  pyproject.toml
premier_geek/api/runtime/: errors.py  main.py  security.py  settings.py
premier_geek/api/runtime/repositories/: squads_repository.py  teams_repository.py
premier_geek/api/runtime/services/: team_id_extractor.py
premier_geek/auth/: infrastructure.py
premier_geek/website/: infrastructure.py
premier_geek/website/runtime/: package-lock.json  package.json
premier_geek/website/runtime/public/: index.html
premier_geek/website/runtime/src/: App.js  awsconfig.js
